# autoresearch-gaudi

./: .gitignore  README.md  compare_datasets.py  convert_dataset.py  dashboard.py  monitor.py  prepare.py  program.md  pyproject.toml  run_suite.py
backends/: __init__.py
docs/: evaluating-results.md
tui/: __init__.py  app.py  credentials.py  hardware.py  headless.py  llm_backend.py  orchestrator.py  results.py  widgets.py
